--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- swipers.jr-->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
 
+    <link rel="shortcut icon" href="public/logo-boy.svg" type="image/x-icon" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Barbearia Vanguarda</title>
   </head>
@@ -20,144 +22,166 @@
       <i onclick="menu.showModal ()" data-feather="menu"></i>
     </nav>
 
-    <section class="hero">
-      <div id="header-mask-spacer">
-        <header>
-          <h1>Barbearia <span>Vanguarda</span></h1>
-          <div role="logo" class="logo-hero"></div>
-        </header>
-
-        <!-- role = paper -->
-
-        <div id="hero-slider" role="mask">
-          <swiper-container autoplay loop speed:500;>
-            <swiper-slide>
-              <img src="public/image 1.jpg" alt="" />
-            </swiper-slide>
-            <swiper-slide>
-              <img src="public/slide-2.jpg" alt="" />
-            </swiper-slide>
-            <swiper-slide>
-              <img src="public/slide-3.jpg" alt="" />
-            </swiper-slide>
-          </swiper-container>
+    <main>
+      <section class="hero">
+        <div id="header-mask-spacer">
+          <header>
+            <h1>
+              Barbearia <br />
+              <span>Vanguarda</span>
+            </h1>
+            <div role="logo" class="logo-hero"></div>
+          </header>
+          <!-- role = paper -->
+          <div id="hero-slider" role="mask">
+            <swiper-container autoplay loop speed:500;>
+              <swiper-slide>
+                <img src="public/image 1.jpg" alt="" />
+              </swiper-slide>
+              <swiper-slide>
+                <img src="public/slide-2.jpg" alt="" />
+              </swiper-slide>
+              <swiper-slide>
+                <img src="public/slide-3.jpg" alt="" />
+              </swiper-slide>
+            </swiper-container>
+          </div>
         </div>
-      </div>
-
-      <p class="paragrafo-hero">
-        Obtenha um estilo impecável, do cabelo à barba.
-      </p>
-    </section>
-    <section class="a-barnearia-section">
-      <h1>A Barbearia</h1>
-
-      <div class="bolinhas translate-y-center">gh</div>
-
-      <div role="mask" class="translate-y-center">
-        <img
-          src="public/a-barbearia.jpg"
-          alt="imagem de unidade da barbearia vanguarda"
-        />
-      </div>
-
-      <article class="card">
-        <p class="text-justify text-small">
-          Na Barbearia Vanguarda, tradição e modernidade se encontram para
-          oferecer cortes, barbas e experiências únicas. Um ambiente pensado
-          para homens que valorizam estilo, conforto e cuidado pessoal.
+        <p class="paragrafo-hero">
+          Obtenha um estilo impecável, do cabelo à barba.
         </p>
-        <!-- a= ancora = anchor -->
-        <a role="button"> Leia mais </a>
-      </article>
-    </section>
-    <!--seção serviço-->
-
-    <section class="serviços-section justify-between items-center">
-      <p>
-        Estilo, cuidado e excelência <br />
-        em cada corte
-      </p>
-      <div class="flex justify-between">
-        <div role="mask" class="justify-center items-center">
+      </section>
+      <section class="a-barnearia-section">
+        <h1>A Barbearia</h1>
+        <div class="bolinhas translate-y-center">gh</div>
+        <div role="mask" class="translate-y-center">
           <img
-            src="public/servicos.jpg"
-            alt="imagem de serviços da barbearia vanguarda"
+            src="public/a-barbearia.jpg"
+            alt="imagem de unidade da barbearia vanguarda"
           />
         </div>
-
-        <article class="flex flex-col justify-around items-center">
-          <h2>Corte</h2>
-          <p>Social, degradê, surfista, militar, razor part, undercut</p>
-          <a role="button" href="#">Ver mais</a>
+        <article class="card">
+          <p class="text-justify text-small">
+            Na Barbearia Vanguarda, tradição e modernidade se encontram para
+            oferecer cortes, barbas e experiências únicas. Um ambiente pensado
+            para homens que valorizam estilo, conforto e cuidado pessoal.
+          </p>
+          <!-- a= ancora = anchor -->
+          <a role="button"> Leia mais </a>
         </article>
-      </div>
-
-      <div class="fileira de bolinhas"></div>
-    </section>
-
-    <section class="contato-section justify-between">
-      <h1>Entre em contado conosco</h1>
-
-      <div role="mask">
-        <video src="public/video-contato.webm" autoplay muted loop></video>
-      </div>
-
-      <div class="buttons-spacer flex flex-col gap-2">
-        <a role="button" href="bellesoliveira11@gmail.com">
-          <i data-feather="mail"></i>
-          Nos envie um Email
-        </a>
-
-        <a
-          role="button"
-          class="whatsapp-link"
-          href="https://wa.me/55119807997785?text=srbgdghnhn"
-        >
-          <div class="whatsapp-icon"></div>
-
-          Fale conosco
-        </a>
-      </div>
-    </section>
-
-    <!--SEÇÃO UNIDADES-->
-
-    <section class="unidades-section gap-8">
-      <p>
-        Nossa sede, localizada na zona leste de São Paulo, e as demais unidades,
-        estão abertas todos os dias.<br /><br />
-        Confira os horários específicos de cada unidade.
-      </p>
-
-      <div class="map">
-        <div class="map-mask">
-          <img src="public/mapa-1.jpg" alt="imagem da unidade 1 " />
+      </section>
+      <!--seção serviço-->
+      <section class="serviços-section justify-between items-center">
+        <p>
+          Estilo, cuidado e excelência <br />
+          em cada corte
+        </p>
+        <div class="flex justify-between">
+          <div role="mask" class="justify-center items-center">
+            <img
+              src="public/servicos.jpg"
+              alt="imagem de serviços da barbearia vanguarda"
+            />
+          </div>
+          <article class="flex flex-col justify-around items-center">
+            <h2>Corte</h2>
+            <p>Social, degradê, surfista, militar, razor part, undercut</p>
+            <a role="button" href="#">Ver mais</a>
+          </article>
         </div>
-
-        <address class="flex flex-col gap-1">
-          <h2>Av. Marechal Tito 1500</h2>
-          <h3>São Miguel Paulista, São Paulo</h3>
-        </address>
-      </div>
-    </section>
-
-    <footer>
-      <div class="flex justify-between items-center">
-        <div role="logo"></div>
-
-        <!-- navigation-->
-        <nav class="flex gap-4">
-          <a href="#">Contato</a>
-          <a href="#">Unidades</a>
-          <a href="#">Serviços</a>
-          <a href="#">A Barbearia</a>
-          <a href="#">Home</a>
-        </nav>
-      </div>
-      <div>
-        <p>© Barbearia Vanguarda - todos os direitos reservados desde 2023</p>
-      </div>
-    </footer>
+        <div class="fileira de bolinhas"></div>
+      </section>
+      <section class="contato-section justify-between">
+        <h1>Entre em contado conosco</h1>
+        <div role="mask">
+          <video src="public/video-contato.webm" autoplay muted loop></video>
+        </div>
+        <div class="buttons-spacer flex flex-col gap-2">
+          <a role="button" href="bellesoliveira11@gmail.com">
+            <i data-feather="mail"></i>
+            Nos envie um Email
+          </a>
+          <a
+            role="button"
+            class="whatsapp-link"
+            href="https://wa.me/55119807997785?text=srbgdghnhn"
+          >
+            <div class="whatsapp-icon"></div>
+            Fale conosco
+          </a>
+        </div>
+      </section>
+      <!--SEÇÃO UNIDADES-->
+      <section class="unidades-section gap-8">
+        <p>
+          Nossa sede, localizada na zona leste de São Paulo, e as demais
+          unidades, estão abertas todos os dias.<br /><br />
+          Confira os horários específicos de cada unidade.
+        </p>
+        <swiper-container space-between="-96" rewand class="swiper-unidades">
+          <swiper-slide>
+            <div class="map">
+              <div class="map-mask">
+                <img src="public/unidade-1.jpg" alt="imagem da unidade 1 " />
+              </div>
+              <address class="flex flex-col gap-1">
+                <h2>Av. Marechal Tito 1500</h2>
+                <h3>São Miguel Paulista, São Paulo</h3>
+              </address>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="map">
+              <div class="map-mask">
+                <img src="public/unidade-2.jpg" alt="imagem da unidade 1 " />
+              </div>
+              <address class="flex flex-col gap-1">
+                <h2>Av. Marechal Tito 1500</h2>
+                <h3>São Miguel Paulista, São Paulo</h3>
+              </address>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="map">
+              <div class="map-mask">
+                <img src="public/unidade-3.jpg" alt="imagem da unidade 1 " />
+              </div>
+              <address class="flex flex-col gap-1">
+                <h2>Av. Marechal Tito 1500</h2>
+                <h3>São Miguel Paulista, São Paulo</h3>
+              </address>
+            </div>
+          </swiper-slide>
+          <swiper-slide>
+            <div class="map">
+              <div class="map-mask">
+                <img src="public/slide-3.jpg" alt="imagem da unidade 1 " />
+              </div>
+              <address class="flex flex-col gap-1">
+                <h2>Av. Marechal Tito 1500</h2>
+                <h3>São Miguel Paulista, São Paulo</h3>
+              </address>
+            </div>
+          </swiper-slide>
+        </swiper-container>
+      </section>
+      <footer>
+        <div class="flex justify-between items-center">
+          <div role="logo"></div>
+          <!-- navigation-->
+          <nav class="flex flex-col gap-4">
+            <a href="#">Contato</a>
+            <a href="#">Unidades</a>
+            <a href="#">Serviços</a>
+            <a href="#">A Barbearia</a>
+            <a href="#">Home</a>
+          </nav>
+        </div>
+        <div>
+          <p>© Barbearia Vanguarda - todos os direitos reservados desde 2023</p>
+        </div>
+      </footer>
+    </main>
 
     <dialog open class="justify-between">
       <div role="logo"></div>
@@ -214,6 +238,16 @@
       //const= constante
       //menu= nome da variavel
       const menu = document.querySelector("dialog");
+
+      // RESPONSIVO SLIDER DE UNIDADES //
+      document.querySelector(".swiper-unidades").breakpoints = {
+        400: {
+          spaceBetween: -116,
+        },
+        768: {
+          spaceBetween: -356,
+        },
+      };
     </script>
   </body>
 </html>
